fixing the scroll problem and the js injection